--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "quasar dev",
     "build": "quasar build",
     "build:pwa": "quasar build -m pwa",
-    "prebuild": "node GoogleSheetToJson.js"
+    "prebuild": "node GoogleSheetToJson.js",
+    "i18n": "node GoogleSheetToJson.js"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
@@ -18,6 +19,8 @@
     "googleapis": "^39.2.0",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
+    "sweetalert2": "^11.4.24",
+    "validator": "^13.7.0",
     "vue": "^3.0.0",
     "vue-i18n": "^9.2.0-beta.40",
     "vue-router": "^4.0.0"
