--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.15.1",
+    "@vueup/vue-quill": "^1.0.0-beta.9",
     "axios": "^0.21.1",
     "dotenv": "^16.0.1",
     "googleapis": "^39.2.0",
