--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pinia": "^2.0.11",
     "pinia-plugin-persistedstate": "^2.1.0",
     "quasar": "^2.7.6",
+    "quill-emoji": "^0.2.0",
     "sweetalert2": "^11.4.24",
     "validator": "^13.7.0",
     "vue": "^3.0.0",
