--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.15.1",
+    "@sweetalert2/themes": "^5.0.12",
     "@vueup/vue-quill": "^1.0.0-beta.9",
     "axios": "^0.21.1",
     "dotenv": "^16.0.1",
@@ -22,7 +23,7 @@
     "pinia-plugin-persistedstate": "^2.1.0",
     "quasar": "^2.7.6",
     "quill-emoji": "^0.2.0",
-    "sweetalert2": "^11.4.24",
+    "sweetalert2": "^11.4.29",
     "validator": "^13.7.0",
     "vue": "^3.0.0",
     "vue-i18n": "^9.2.0-beta.40",
