--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "quasar": "^2.7.6",
     "quill-emoji": "^0.2.0",
     "sweetalert2": "^11.4.29",
+    "swiper": "^8.3.2",
     "validator": "^13.7.0",
     "vue": "^3.0.0",
     "vue-i18n": "^9.2.0-beta.40",
